spacing issues

--- a/About Page/about.css
+++ b/About Page/about.css
@@ -78,6 +78,6 @@ p {
         align-items: center;
         text-align: center;
         margin-right: 10%;
-        margin-left: 10%;
+        margin-left: 20%;
     }
 }
